@@ -26,9 +26,20 @@ The following rules are used as defined in RFC 2849 and not reproduced
 here: AttributeDescription, SAFE-STRING, BASE64-STRING, SPACE.
 .SH Changes to the RFC 2849 BNF grammar
 .nf
-ldapvi-file = vspace ldif-attrval-record
-              *(vspace SEP vspace ldif-attrval-record) vspace
-ldif-attrval-record = *(comment) dn-spec SEP 1*(*(comment) attrval-spec)
+ldapvi-file = vspace ldapvi-record
+              *(vspace SEP vspace ldapvi-record) vspace
+ldapvi-record = ldapvi-attrval-record
+	        / ldapvi-rename-record
+		/ ldapvi-modify-record
+ldapvi-attrval-record = *(comment) dn-spec 1*(*(comment) attrval-spec)
+ldapvi-rename-record = *(comment)
+                       "rename" distinguishedName SEP
+		       "dn" value-spec SEP
+ldapvi-modify-record = *(comment)
+                       "modify" distinguishedName SEP
+		       1*(*(comment) mod-spec)
+mod-spec = AttributeDescription (value-delete / value-add / value-replace) SEP
+	   *(value-enc SEP)
 
 vspace = *(comment / sep)
 comment = "#" *(unescaped-char) *(SEP " " *(unescaped-char)) SEP
@@ -38,16 +49,22 @@ key = number / "add"
 distinguishedName = value-spec                  ;encoding an RFC 2253 DN
 
 attrval-spec = AttributeDescription value-spec SEP
-value-spec = (SPACE escaped-string /            ;escape CR/LF with '\\\\'
-              ":" SPACE 0*1(SAFE-STRING         ;LDIF compatible
-                            *(SEP " " *SAFE-CHAR)) /
-              "::" SPACE BASE64-STRING /        ;ditto
-              ":" number SPACE 0*1(octet) /     ;exactly `number' octets
-              ":<" SPACE url /                  ;only file:// supported
-              ":crypt" SPACE password /         ;for userPassword
-              ":md5" SPACE password /
-              ;; other encoding markers reserved
-             )
+value-spec = value-simple / value-enc
+value-simple = SPACE escaped-string             ;escape CR/LF with '\\\\'
+value-enc = (":;" SPACE escaped-string /        ;ditto
+             ":" SPACE 0*1(SAFE-STRING          ;LDIF compatible
+                           *(SEP " " *SAFE-CHAR)) /
+             "::" SPACE BASE64-STRING /         ;ditto
+             ":" number SPACE 0*1(octet) /      ;exactly `number' octets
+             ":<" SPACE url /                   ;only file:// supported
+             ":crypt" SPACE password /          ;for userPassword
+             ":cryptmd5" SPACE password /
+             ":md5" SPACE password /
+             ":smd5" SPACE password /
+             ":sha" SPACE password /
+             ":ssha" SPACE password /
+             ;; other encoding markers reserved
+            )
 
 octet = %x00-ff
 number = 1*(%x30-39)                            ;any decimal number
@@ -55,6 +72,10 @@ unescaped-char = %x00-%x09 / %x0a-0c / %x0d-ff  ;any except for CR/LF.
 escaped-string = *(unescaped-char / %x5c %x0a / %x5c %x0d / %x5c %x5c)
 password = 0*unescaped-char
 SEP = LF                                        ;this is a unix program!
+
+value-delete    = value-spec ;with effective value "delete"
+value-add       = value-spec ;with effective value "add"
+value-replace   = value-spec ;with effective value "replace"
 
 .SH BUGS
 Please report bugs to <ldapvi@lists.askja.de>.
